workloads/rabbitmq/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.deepin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-rabbitmq
                port:
                  number: 15672
  tls:
    - hosts:
        - rabbitmq.deepin.me
      secretName: deepin-origin-tls
